deploy: cf4e30f2d4efd33679e3181500c101dfd245ca61

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         rel="noopener noreferrer"
       >
         <img
-          src="assets/arc_logo.png"
+          src="assets/arc_logo-small.png"
           alt="Atlanta Regional Commission"
           id="headerLogo"
         />
@@ -94,7 +94,7 @@
         value="112"
         step="1"
       ></wa-slider>
-      <div id="sliderLabel">May 2025</div>
+      <div id="sliderLabel">&nbsp;</div>
     </div>
 
     <!-- About dialog (opened by About button inside Options drawer) -->
@@ -155,7 +155,7 @@
       id="mobileWelcomeDialog"
       style="--width: calc(100vw - 40px); max-width: 500px"
     >
-      <div style="line-height: 1.6; color: #333">
+      <div class="mobile-welcome-body">
         <p style="margin-top: 0">
           Welcome to the Metro Atlanta Eviction Tracker, built by the Atlanta
           Regional Commission's Research and Innovation Team! Please note that
